apps/base/orion/orion-api.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
  labels:
    app: orion-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion-api
  template:
    metadata:
      labels:
        app: orion-api
    spec:
      containers:
        - name: api
          image: ghcr.io/isaiah-harville/orion/orion-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5171
          readinessProbe:
            httpGet:
              path: /health
              port: 5171
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5171
            initialDelaySeconds: 10
            periodSeconds: 20
