apps/base/orion/orion-gui.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-gui
  labels:
    app: orion-gui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion-gui
  template:
    metadata:
      labels:
        app: orion-gui
    spec:
      containers:
        - name: gui
          image: ghcr.io/isaiah-harville/orion/orion-gui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 20
