apps/base/orion/orion-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-api
  labels: { app: orion-api }
spec:
  selector: { app: orion-api }
  ports:
    - name: http
      port: 80
      targetPort: 5171
