apps/base/orion/orion-gui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-gui
  labels: { app: orion-gui }
spec:
  selector: { app: orion-gui }
  ports:
    - name: http
      port: 80
      targetPort: 5173
