apps/base/orion/orion.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Public
    gethomepage.dev/name: Orion
    gethomepage.dev/description: Public Orion app
    gethomepage.dev/pod-selector: app in (orion-api,orion-gui)
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [orion.harville.dev]
      secretName: harville-wildcard-shared-tls
  rules:
    - host: orion.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orion-gui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orion-api
                port:
                  number: 80
